"pull-nhanh-dev-ve"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=${port:8888}
-spring.datasource.url=jdbc:mysql://localhost:3306/HouseRenting_MD6
+spring.datasource.url=jdbc:mysql://localhost:3306/houserenting_md6
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
