--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.show.sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 #spring.jpa.properties.hibernate.hb2dll.auto=update
 #logging.level.org.hibernate.SQL=DEBUG
