--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
 server.port=${SERVER_PORT:8888}
+spring.main.banner-mode=off
 spring.datasource.url=${JDBC_DATABASE_URL:jdbc:mysql://localhost:3306/HouseRenting_MD6}
 spring.datasource.username=${JDBC_DATABASE_USERNAME:root}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD:123456}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.id.new_generator_mappings=false
+#spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.properties.hibernate.show.sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.hb2dll.auto=update
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.jpa.properties.hibernate.hb2dll.auto=update
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #Email
 spring.mail.host=${MAIL_HOST:}
 spring.mail.port=${MAIL_PORT:}
